[gd_scene load_steps=4 format=3 uid="uid://ccu6jmlk44dlh"]

[ext_resource type="Script" path="res://Scripts/PauseMenu.gd" id="1_g4ej0"]
[ext_resource type="Theme" uid="uid://2mc217c3on06" path="res://Assets/Themes/PauseButtons.tres" id="2_y63xp"]
[ext_resource type="AudioStream" uid="uid://d353y2xky20vo" path="res://Assets/Music/button Click.mp3" id="3_qel6v"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g4ej0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="Resume" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_y63xp")
text = "Resume (ESC)"

[node name="Reset" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_y63xp")
text = "Reset (R)"

[node name="Main Menu" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_y63xp")
text = "Main Menu"

[node name="Quit" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
mouse_default_cursor_shape = 2
theme = ExtResource("2_y63xp")
text = "Quit"

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qel6v")
volume_db = 5.0
bus = &"SFX"

[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
